fix dynamic layout problem in facebook

--- a/assets/styles/gameLobby.css
+++ b/assets/styles/gameLobby.css
@@ -92,6 +92,14 @@
 	height:170px;
 }
 
+/*.left_col {
+	width: 228px;
+}
+
+.right_col {
+	width: 484px;
+}*/
+
 #block{
 	position:absolute;
 	height:600px;
